--- a/src/app/components/menu-lateral-direito/menu-lateral-direito.component.html
+++ b/src/app/components/menu-lateral-direito/menu-lateral-direito.component.html
@@ -12,7 +12,7 @@
         <ul class="results-list" *ngIf="usuarios.length > 0">
           <li
             *ngFor="let usuario of usuarios"
-            (click)="onSelect(usuario)"
+            (click)="selecionarUsuario(usuario)"
             class="result-item"
           >
             <!-- <img [src]="" alt="{{ usuario.foto }}" class="avatar" /> -->
