Adicionando foto a barra de pesquisa

--- a/src/app/components/menu-lateral-direito/menu-lateral-direito.component.html
+++ b/src/app/components/menu-lateral-direito/menu-lateral-direito.component.html
@@ -15,7 +15,7 @@
             (click)="selecionarUsuario(usuario)"
             class="result-item"
           >
-            <!-- <img [src]="" alt="{{ usuario.foto }}" class="avatar" /> -->
+             <img [src]="usuario.foto" alt="fotoPerfil" class="avatar" /> 
             <div class="user-info">
               <div class="name">{{ usuario.nome }}</div>
             </div>
