--- a/src/app/components/menu-lateral/menu-lateral.component.html
+++ b/src/app/components/menu-lateral/menu-lateral.component.html
@@ -10,7 +10,7 @@
         <ng-icon title="Home" name="heroHome" />
       </button>
 
-      <button>
+      <button [routerLink]="['/meu-perfil']">
         <ng-icon title="Perfil" name="heroUserCircle" />
       </button>
 
