--- a/src/app/components/feed/feed.component.css
+++ b/src/app/components/feed/feed.component.css
@@ -1,9 +1,3 @@
-.app-container {
-  display: flex;
-  height: 100vh;
-  color: #FFF;
-}
-
 /* Área dos Feeds */
 .main-feed {
   flex: 1;
@@ -28,7 +22,7 @@
   font-size: 30px;
   font-weight: bold;
   text-align: center;
-  color: #FFF;
+  color: #fff;
   padding: 10px 10px 20px;
   margin: 0;
 }
@@ -81,7 +75,7 @@
 }
 
 .post-user-info span {
-  color: #8899A6;
+  color: #8899a6;
   font-size: 12px;
 }
 
@@ -94,7 +88,7 @@
 }
 
 .post-content p {
-  color: #FFF;
+  color: #fff;
   font-size: 16px;
   line-height: 1.5;
 }
@@ -109,13 +103,13 @@
   display: flex;
   justify-content: space-around;
   padding-top: 10px;
-  border-top: 1px solid #22303C;
+  border-top: 1px solid #22303c;
 }
 
 .action-btn {
   background: none;
   border: none;
-  color: #1DA1F2;
+  color: #1da1f2;
   font-weight: bold;
   cursor: pointer;
   padding: 8px 12px;
@@ -142,16 +136,7 @@
   font-size: 1em;
 }
 
-
-
-
-
 @media (max-width: 1024px) {
-
-  .app-menu-lateral-direito {
-    display: none;
-  }
-
   .feed-container {
     padding: 20px;
     gap: 30px;
@@ -161,6 +146,5 @@
     flex: 1;
     padding: 80px 20px 0 20px;
     overflow: hidden;
-
   }
 }
