--- a/src/app/components/menu-lateral/menu-lateral.component.css
+++ b/src/app/components/menu-lateral/menu-lateral.component.css
@@ -1,16 +1,10 @@
 /* Menu Lateral Esquerdo */
-.app-container {
-  display: flex;
-  height: 100vh;
-  color: #FFF;
-}
-
 .sidebar {
   width: 100px;
   background-color: #0a1117;
   display: flex;
   flex-direction: column;
-  padding: 20px 0;
+  padding: 20px 80px 0 0;
 }
 
 .sidebar .logo-wrapper {
@@ -43,7 +37,7 @@
   display: flex;
   padding: 15px 20px;
   font-size: 2em;
-  color: #FFF;
+  color: #fff;
   border-radius: 20px;
   transition: background-color 0.2s;
   align-items: center;
@@ -54,9 +48,16 @@
   background-color: rgba(29, 161, 242, 0.1);
 }
 
-@media (max-width: 768px) {
-  .app-container {
-    flex-direction: column;
+@media (max-width: 1024px) {
+  .sidebar {
+    padding: 20px 20px 0 0;
+    width: 80px;
+  }
+
+  @media (max-width: 768px) {
+    .app-container {
+      flex-direction: column;
+    }
   }
 
   .sidebar {
